Adding responsiveness to website

--- a/src/index.html
+++ b/src/index.html
@@ -2,29 +2,9 @@
 <html lang="en">
 
 <head>
-    <title>Jovian Careers</title>
-    <link rel="icon" href="/src/favicon.png" type="image/x-icon">
-    <!-- <style>
-        h2{
-            text-align: center;
-            color: darkblue;
-        }
-    </style> -->
-    
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Learn about job openings at Jovian and submit your application now">
-    <meta name="keywords" content="data science, software development, jobs">
-    <meta name="author" content="Jovian">
-    <meta name="robots" content="index, follow">
-    <meta property="og:title" content="Jovian Careers">
-    <meta property="og:description" content="Learn about job openings at Jovian and submit your application now">
-    <meta property="og:image" content="/src/description.png">
-    <meta name="twitter:title" content="Jovian Careers">
-    <meta name="twitter:description" content="Learn about job openings at Jovian and submit your application now">
-    <meta name="twitter:image" content="/src/description.png">
-
-
+    <title>
+        My Page
+    </title>
     <link rel="stylesheet" href="styles.css">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -34,12 +14,14 @@
 
 <body>
     <div id="navbar">
-        <img id="logo" src="https://cdn-icons-png.flaticon.com/512/4436/4436481.png" alt="logo">
+        <img id="logo" src="banner.jpg" alt="logo">
+        <img id="logo-with-text" src="banner.jpg" alt="logo-with-text">
+        <div id="company-name">Parth Chauhan </div>
     </div>
 
-    <img id= "Banner" src="banner-2.jpg" alt="Banner" height="240">
+    <img id= "Banner" src="banner-2.jpg" alt="Banner" >
     <h1>
-        Welcome to Jovia
+        About Jovia
     </h1>
     <!-- <h1 style="text-align: center;color: indigo;">
         About Jovia
@@ -76,6 +58,32 @@
 
     <h2>Job Opportunities</h2> 
     <div id="jobs">
+        <div id="jobs-list">
+            <div class="job">
+                <div class="job-title">FrontEnd Developer</div>
+                <div class="job-detail">Bengaluru, India</div>
+                <div class="job-detail">₹12,00,000</div>
+                <div class="job-detail">Mar 3, 2023</div>
+            </div>
+            <div class="job">
+                <div class="job-title">Full stack Developer</div>
+                <div class="job-detail">New Delhi, India</div>
+                <div class="job-detail">₹15,00,000</div>
+                <div class="job-detail">Feb 1, 2023</div>
+            </div>
+            <div class="job">
+                <div class="job-title">Data scientist</div>
+                <div class="job-detail">San Francisco,	USA</div>
+                <div class="job-detail">$175,000</div>
+                <div class="job-detail">Dec 22, 2022</div>
+            </div>
+            <div class="job">
+                <div class="job-title">Machine learning Engineer</div>
+                <div class="job-detail">Remote</div>
+                <div class="job-detail">$80,000</div>
+                <div class="job-detail">Sep 19, 2022</div>
+            </div>
+        </div>
         <table id="jobs-table">
             <tr class="job-header-row">
                 <th rowspan="2">Job Title</th>
